--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,68 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
+body {
+    display: flex;
+    flex-direction: column;
+    background-color: hsla(0, 0%, 90%);
+    align-items: center;
+}
+#myH1 {
+    font-size: clamp(3rem, 4vw, 5rem);
+    font-family: Arial, sans-serif;
+    color: hsl(0, 0%, 25%);
+    margin: .4em;
+    font-family: poppins, sans-serif;
+}
+#container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 5px solid;
+    border-radius: 3.12em;
+    padding: 30px;
+    background-color: white;
+}
+#display {
+    font-size: clamp(3.5rem, 5vw, 6rem);
+    font-family: monospace;
+    font-weight: bold;
+    color: hsl(0, 0%, 30%);
+    text-shadow: 2px 2px 2px hsla(0, 0%, 0%, 0.75);
+    margin-bottom: .35em;
+}
+#controls button {
+    font-size: clamp(1rem, 1.5vw, 2rem);
+    font-weight: bold;
+    padding: 10px 20px;
+    margin: 5px;
+    min-width: 2rem;
+    font-family: poppins, sans-serif;
+    width: 7.8rem;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    color: white;
+    transition: background-color 0.2s ease;
+}
+#startBtn {
+    background-color: hsl(115, 100%, 40%);
+}
+#startBtn:hover {
+    background-color: hsl(115, 100%, 30%);
+}
+#stopBtn {
+    background-color: hsl(10, 90%, 50%);
+}
+#stopBtn:hover {
+    background-color: hsl(10, 90%, 40%);
+}
+#resetBtn {
+    background-color: hsl(205, 90%, 60%);
+}
+#resetBtn:hover {
+    background-color: hsl(205, 90%, 50%);
+}
