--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,8 @@ body {
     flex-direction: column;
     background-color: hsla(0, 0%, 90%);
     align-items: center;
+    width: 100%;
+    height: 100vh;
 }
 #myH1 {
     font-size: clamp(3rem, 4vw, 5rem);
@@ -24,9 +26,10 @@ body {
     border-radius: 3.12em;
     padding: 30px;
     background-color: white;
+    
 }
 #display {
-    font-size: clamp(4rem, 5vw, 6rem);
+    font-size: clamp(3rem, 5vw, 6rem);
     font-family: monospace;
     font-weight: bold;
     color: hsl(0, 0%, 30%);
@@ -40,7 +43,6 @@ body {
     margin: 5px;
     min-width: 2rem;
     font-family: poppins, sans-serif;
-    width: 7.8rem;
     border: none;
     border-radius: 10px;
     cursor: pointer;
@@ -64,4 +66,22 @@ body {
 }
 #resetBtn:hover {
     background-color: hsl(205, 90%, 50%);
+}
+
+@media screen and (max-width:620px) {
+    #container {
+        width: 95%;
+    }
+    #myH1 {
+        font-size: 2rem;
+    }
+    #controls {
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 10px;
+    }
+    #controls button {
+        margin: 0;
+    }
 }
