--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
     font-size: clamp(3rem, 4vw, 5rem);
     color: hsl(0, 0%, 25%);
     margin: .4em;
-    font-family: poppins, sans-serif;
+    font-family: poppins, Arial, sans-serif;
 }
 #container {
     display: flex;
@@ -30,7 +30,7 @@ body {
 }
 #display {
     font-size: clamp(3rem, 5vw, 6rem);
-    font-family: monospace;
+    font-family: monospace, poppins, sans-serif;
     font-weight: bold;
     color: hsl(0, 0%, 30%);
     text-shadow: 2px 2px 2px hsla(0, 0%, 0%, 0.75);
@@ -42,7 +42,7 @@ body {
     padding: 10px 20px;
     margin: 5px;
     min-width: 2rem;
-    font-family: poppins, sans-serif;
+    font-family: poppins, Arial, sans-serif;
     border: none;
     border-radius: 10px;
     cursor: pointer;
